# breeze

./: .gitignore  Cargo.toml  install.sh  package-lock.json  package.json
src/: agent.rs  checkpoint.rs  config.rs  harness.rs  index.html  main.js  main.rs  prompts.rs  styles.css  ui.rs  util.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs
src/provider/: anthropic.rs  mod.rs
src/tools/: bash.rs  file.rs  mod.rs
