[package]
name = "breeze"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
crossterm = "0.28"
rustyline = "14"
futures = "0.3"
async-trait = "0.1"
thiserror = "2"
anyhow = "1"
dirs = "5"
libc = "0.2"
